--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
     <style>
-        #employee-table th,
+        #train-table th,
         td {
             display: inline-block;
             width: 16.575%;
@@ -34,10 +34,10 @@
     </style>
 
 
-    <!-- Employee Tracker -->
+   
     <div class="container">
 
-        <!-- Jumbotron -->
+        
         <div class="jumbotron" style="background-color:green; color: white">
             <h1 class="text-center">Train Scheduler</h1>
             <h3 class="text-center">When are them dang ole' Choos Choos Coming?</h3>
@@ -48,10 +48,10 @@
 
             <div class="col-md-12">
 
-                <!-- Current Employees-->
+                <!-- Current Train Times-->
                 <div class="card mb-4">
                     <div class="card-body">
-                        <h3 class="card-title">Current Employees</h3>
+                        <h3 class="card-title">Train Schedule</h3>
                         <table class="table table-sm table-hover" id='train-table'>
                             <thead>
                                 <tr>
@@ -74,10 +74,10 @@
 
         <div class="row">
             <div class="col-md-12">
-                <!-- Add Employee  -->
+                <!-- Add Train  -->
                 <div class="card mb-4 p-4">
                     <div class="card-body">
-                        <h3 class="card-title">Add Employee</h3>
+                        <h3 class="card-title">Add Train</h3>
                         <!-- Entry Form -->
                         <form>
                             <div class="form-group row">
@@ -86,7 +86,7 @@
                             </div>
                             <div class="form-group row">
                                 <label for="destination-input">Destination</label>
-                                <input class="form-control" id="destination-input"type="text">
+                                <input class="form-control" id="dest-input"type="text">
                             </div>
                             <div class="form-group row">
                                 <label for="train-time-input">First Train Time(HH:MM - Military Time)</label>
