--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
 
+    <!--Moment.js-->
+    <script src=" /npm/moment@2.22.2/moment.min.js"></script>
 
     <title>Train Scheduler</title>
 </head>
