--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         crossorigin="anonymous"></script>
 
     <!--Moment.js-->
-    <script src=" /npm/moment@2.22.2/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
     <title>Train Scheduler</title>
 </head>
