--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <input class="form-control" id="dest-input"type="text">
                             </div>
                             <div class="form-group row">
-                                <label for="train-time-input">First Train Time(HH:MM - Military Time)</label>
+                                <label for="train-time-input">First Train Time(HH:mm - Military Time)</label>
                                 <input class="form-control" id="train-time-input" type="text">
                             </div>
                             <div class="form-group row">
